# md-python

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Notebook Quickstart.md  README.md  V1.md  environment.yaml  mcp_server.py  mcp_server_http.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
cli/: setup.py
cli/md_cli/: __init__.py  api.py  batch.py  config.py  main.py
development/: rescue_dataset_sample_metadata_values.py  smoke_workspaces_mcp.py  smoke_workspaces_v2.py
development/GI/: api_v2_smoke_test.ipynb  check_health.ipynb  test_cptac_pdac_upload.ipynb  test_ni_v3.ipynb  test_qc_visualisations.ipynb  test_upload.ipynb  test_v1.ipynb
docs/: README.md  commands.md  examples.md
examples/api_tour/: README.md  api_tour.executed.ipynb  api_tour.html  api_tour.ipynb
examples/dataset/: create_dataset_example.py  delete_dataset_example.py  download_table.py  get_by_id.py  list_datasets_by_experiment_example.py  query.py  retry_dataset_example.py
examples/e2e notebooks/: e2e_api_workflow.ipynb  e2e_dose_response.ipynb  e2e_pairwise.ipynb
examples/experiment/: create_experiment_example.py  create_experiment_with_local_files_example.py  get_experiment_by_id_example.py  get_experiment_by_name_example.py  update_sample_metadata_example.py
examples/health/: health_check_example.py
examples/md_format_metabolite/: README.md  example_md_format_metabolite.tsv  experiment_design.csv  sample_metadata.csv
mcp_tools/: __init__.py  _client.py  batch.py  datasets.py  entities.py  experiments.py  files.py  health.py  pipelines.py  uploads.py
scripts/: build-docs.py  build-skill.py
skill/: SKILL.md
tests/: conftest.py  test_client.py  test_client_factory.py  test_fixtures.py
(+252 files in other folders)
